[package]
name = "tg_work_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

# Used to setup a webhook
warp = "0.3.2"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.50"
futures = "0.3.21"

chrono = "0.4.19"
dotenv = "0.15.0"
google-sheets4 = "3.0.0"
